Fixed remaining errors. Works with new monitor.

--- a/windows-analyzer/analysis.conf
+++ b/windows-analyzer/analysis.conf
@@ -1,9 +1,9 @@
 [analysis]
 category = file
 clock =
-file_name = C:\Users\Mike\Desktop\test.exe
+file_name = C:\Windows\System32\cmd.exe
 package = exe
-options = screenshots=0,human=0,procmemdump=0,force-sleepskip=0,disguise=0
+options = human=0
 terminate_processes = True
 enforce_timeout = False
 timeout = 120
@@ -11,4 +11,3 @@ ip = 127.0.0.1
 port = 1234
 pe_exports = 
 id = 1
-#logpipe = C:\\Users\\Mike\\Desktop\\log.bson
