Forgot to add lib/ (it was ignored because of gitignore Python format. Added bson-parser instructions. Now put all log files into single folder for ease.

--- a/windows-analyzer/analysis.conf
+++ b/windows-analyzer/analysis.conf
@@ -1,6 +1,7 @@
 [analysis]
 category = file
 clock =
+#file_name = C:\Users\Administrator\Desktop\artifact.exe
 file_name = C:\Windows\System32\cmd.exe
 package = exe
 options = human=0
