--- a/windows-analyzer/analysis.conf
+++ b/windows-analyzer/analysis.conf
@@ -2,9 +2,9 @@
 category = file
 clock =
 #file_name = C:\Users\Administrator\Desktop\artifact.exe
-file_name = C:\Windows\System32\cmd.exe
+file_name = C:\Windows\System32\notepad.exe
 package = exe
-options = human=0
+options = human=0,screenshots=0,disguise=0
 terminate_processes = True
 enforce_timeout = False
 timeout = 120
