--- a/windows-analyzer/analysis.conf
+++ b/windows-analyzer/analysis.conf
@@ -1,10 +1,10 @@
 [analysis]
 category = file
 clock =
-#file_name = C:\Users\Administrator\Desktop\artifact
-file_name = C:\Windows\System32\notepad.exe
+file_name = C:\Users\Administrator\Desktop\artifact
+#file_name = C:\Windows\System32\notepad.exe
 package = exe
-options = human=0,disguise=0,force-sleepskip=0,screenshots=0
+options = human=1,disguise=1,force-sleepskip=1,screenshots=0
 terminate_processes = True
 enforce_timeout = False
 timeout = 120
