Disabled dumping files for now (adds too much space). Disabled terminating processes.

--- a/windows-analyzer/analysis.conf
+++ b/windows-analyzer/analysis.conf
@@ -5,7 +5,7 @@ file_name = C:\Users\Administrator\Desktop\artifact
 #file_name = C:\Windows\System32\notepad.exe
 package = exe
 options = human=1,disguise=1,force-sleepskip=1,screenshots=0
-terminate_processes = True
+terminate_processes = False
 enforce_timeout = False
 timeout = 120
 ip = 127.0.0.1
